--- a/build.gradle
+++ b/build.gradle
@@ -11,24 +11,71 @@ version = project.mod_version
 group = project.maven_group
 
 repositories {
-	// Add repositories to retrieve artifacts from in here.
-	// You should only use this when depending on other mods because
-	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
-	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
-	// for more information about repositories.
+	maven {
+		name = "Bewitchment"
+		url = "https://www.cursemaven.com"
+	}
+	maven {
+		name = "reach"
+		url = "https://maven.jamieswhiteshirt.com/libs-release"
+	}
+	maven {
+		name = "pal"
+		url = "https://dl.bintray.com/ladysnake/libs"
+	}
+	maven {
+		name = "wood api"
+		url = "https://maven.terraformersmc.com/"
+	}
+	maven {
+		name = "somnus"
+		url = "https://maven.theillusivec4.top"
+	}
+	maven {
+		name = "cloth config"
+		url = "https://maven.shedaniel.me/"
+	}
+	maven {
+		name = "patchouli"
+		url = "https://maven.blamejared.com"
+	}
+	maven {
+		name "requiem"
+		url "https://dl.bintray.com/ladysnake/mods"
+	}
+	maven {
+		name = "jitpack"
+		url = "https://jitpack.io"
+	}
 }
 
 dependencies {
-	// To change the versions see the gradle.properties file
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
-
-	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-	// PSA: Some older mods, compiled on Loom 0.2.1, might have outdated Maven POMs.
-	// You may need to force-disable transitiveness on them.
+	modImplementation "com.terraformersmc.terraform-api:terraform-wood-api-v1:${project.terraform_wood_api_version}"
+	include "com.terraformersmc.terraform-api:terraform-wood-api-v1:${project.terraform_wood_api_version}"
+	modImplementation "com.jamieswhiteshirt:reach-entity-attributes:${project.reach_version}"
+	include "com.jamieswhiteshirt:reach-entity-attributes:${project.reach_version}"
+	modImplementation "io.github.ladysnake:PlayerAbilityLib:${project.pal_version}"
+	include "io.github.ladysnake:PlayerAbilityLib:${project.pal_version}"
+	modApi("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}") {
+		exclude(group: "net.fabricmc.fabric-api")
+	}
+	modImplementation "top.theillusivec4.somnus:somnus-fabric:${project.somnus_version}"
+	modImplementation("com.github.virtuoel:pehkui:${project.pehkui_version}") {
+		exclude(group: "net.fabricmc.fabric-api")
+	}
+	modImplementation "io.github.ladysnake:Impersonate:${project.impersonate_version}"
+	modImplementation "vazkii.patchouli:Patchouli:${project.patchouli_version}"
+	modImplementation "com.github.emilyalexandra:trinkets:${project.trinkets_version}"
+
+	modImplementation "curse.maven:bewitchment-394915:${project.bewitchment_version}"
+
+	modImplementation "io.github.ladysnake:requiem-api:${project.requiem_version}"
+	modRuntime "io.github.ladysnake:requiem:${project.requiem_version}"
 }
 
 processResources {
