--- a/gradle.properties
+++ b/gradle.properties
@@ -2,8 +2,8 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	minecraft_version=1.16.5
-	yarn_mappings=1.16.5+build.6
-	loader_version=0.11.3
+	yarn_mappings=1.16.5+build.4
+	loader_version=0.11.1
 
 # Mod Properties
 	mod_version = 1.16.5-0
@@ -11,4 +11,15 @@ org.gradle.jvmargs=-Xmx1G
 	archives_base_name = darkrites
 
 # Dependencies
-	fabric_version=0.32.5+1.16
+	fabric_version=0.32.0+1.16
+	terraform_wood_api_version=1.0.4
+	reach_version=1.0.1
+	pal_version=1.2.1
+	cloth_config_version=4.10.13
+	somnus_version=0.0.11-1.16.5
+	pehkui_version=1.9.0
+	impersonate_version=2.1.0
+	patchouli_version=1.16.4-48-FABRIC
+	trinkets_version=2.6.7
+	bewitchment_version=3245862
+	requiem_version=1.5.1
