--- a/gradle.properties
+++ b/gradle.properties
@@ -21,5 +21,6 @@ org.gradle.jvmargs=-Xmx1G
 	impersonate_version=2.1.0
 	patchouli_version=1.16.4-48-FABRIC
 	trinkets_version=2.6.7
+	modmenu_version=1.16.7
 	bewitchment_version=3245862
 	requiem_version=1.5.1
